feat: Enhance notes treeview loading perf - EXO-74286 - Meeds-io/meeds#2440  (#1133)
Enhance notes treeview loading perf